# TapTune

./: .clang-format  .clang-tidy  .gitignore  128-example.html  256-example.html  512-example.html  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_8md.html  CMakeLists.txt  CODE__OF__CONDUCT_8md.html  CODING__STYLE_8md.html  CONTRIBUTING_8md.html  Doxyfile  README.md  README_8md.html  README__pt__BR_8md.html  README__zh_8md.html  ROADMAP_8md.html  This_01is_01a_01_0gff0000_01red_0g_01word-example.html  _2_users_2davideferigato_2_documents_2_git_hub_2_tap_tune_2components_2lvgl_2src_2core_2lv_event_8h-example.html  _2_users_2davideferigato_2_documents_2_git_hub_2_tap_tune_2components_2lvgl_2src_2misc_2lv_style_8h-example.html  _2home_2runner_2work_2TapTune_2TapTune_2components_2lvgl_2src_2core_2lv_event_8h-example.html  _2home_2runner_2work_2TapTune_2TapTune_2components_2lvgl_2src_2misc_2lv_style_8h-example.html  __test__template_8c.html  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.html  _c_o_d_i_n_g___s_t_y_l_e_8md.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e__pt___b_r_8md.html  animation_8md.html  animimg001_8c.html  animimg001_8c.js  animimg001_8c__incl.dot  animimg002_8c.html  animimg002_8c.js  animimg002_8c__incl.dot  animimg003_8c.html  animimg003_8c__incl.dot  animimg_8md.html  (+4219 more)
docs/: 512-example.html  __test__template_8c.html  _c_h_a_n_g_e_l_o_g_8md.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e__zh_8md.html  _r_o_a_d_m_a_p_8md.html  _this_01is_01a_01_0gff0000_01red_0g_01word-example.html  (+1648 more)
test_native/: CMakeLists.txt  run_tests.sh  test_state_machine.cpp
(+390 files in other folders)
